--- a/kubefiles/logstash-deployment.yaml
+++ b/kubefiles/logstash-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       - env:
         - name: LS_JAVA_OPTS
           value: -Xmx256m -Xms256m
-        image: komljen/logstash
+        image: docker.elastic.co/logstash/logstash:6.1.1
         name: logstash
         ports:
         - containerPort: 5000
