--- a/kubefiles/kibana-deployment.yaml
+++ b/kubefiles/kibana-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         name: kibana
     spec:
       containers:
-      - image: komljen/kibana
+      - image: docker pull docker.elastic.co/kibana/kibana:6.1.1
         name: kibana
         ports:
         - containerPort: 5601
