--- a/kubefiles/elasticsearch-deployment.yaml
+++ b/kubefiles/elasticsearch-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       - env:
         - name: ES_JAVA_OPTS
           value: -Xmx256m -Xms256m
-        image: docker pull docker.elastic.co/elasticsearch/elasticsearch:6.1.1
+        image: docker.elastic.co/elasticsearch/elasticsearch:6.1.1
         name: elasticsearch
         ports:
         - containerPort: 9200
