--- a/kubefiles/elasticsearch-deployment.yaml
+++ b/kubefiles/elasticsearch-deployment.yaml
@@ -16,6 +16,8 @@ spec:
       - env:
         - name: ES_JAVA_OPTS
           value: -Xmx256m -Xms256m
+        - name: ELASTIC_PASSWORD
+          value: changeme
         image: docker.elastic.co/elasticsearch/elasticsearch-platinum:6.1.1
         name: elasticsearch
         ports:
