--- a/kubefiles/filebeat-config.yaml
+++ b/kubefiles/filebeat-config.yaml
@@ -11,7 +11,7 @@ data:
     - type: log
       paths:
         - "/var/log/containers/*.log"
-      exclude_files: ['filebeat.*log','kube.*log']
+      exclude_files: ['filebeat*.log','kube*.log']
       symlinks: true
       json.message_key: log
       json.keys_under_root: true
