--- a/kubefiles/logstash-config.yaml
+++ b/kubefiles/logstash-config.yaml
@@ -4,12 +4,14 @@ metadata:
   name: logstash-config
 data:
   logstash.conf: |-
-    input {
-      beats {
-        port => 5000
-      }
-    }
-
+input {
+   kafka {
+   zk_connect => "kafka-zookeeper:2181"
+   group_id => "logstash"
+   topic_id => "eco-logs"
+   consumer_threads => 1
+  }
+}
     filter {
       mutate {
         rename => ["log", "message"]
@@ -27,6 +29,7 @@ data:
     }
 
     output {
+      stdout {}
       elasticsearch {
         hosts => "elasticsearch:9200"
         user => "elastic"
