--- a/kubefiles/filebeat-config.yaml
+++ b/kubefiles/filebeat-config.yaml
@@ -25,9 +25,9 @@ paths:
 
 exclude_files: ['filebeat*.log','kube*.log']
 symlinks: true
-json.message_key: log
-json.keys_under_root: true
-json.add_error_key: true
+message_key: log
+keys_under_root: true
+add_error_key: true
 multiline.pattern: '^\s'
 multiline.match: after
 document_type: kube-logs
