--- a/kubefiles/filebeat-ds.yaml
+++ b/kubefiles/filebeat-ds.yaml
@@ -20,10 +20,10 @@ spec:
               cpu: 50m
               memory: 50Mi
           env:
-            - name: LOGSTASH_HOSTS
-              value: logstash:5000
+            - name: KAFKA_HOSTS
+              value: kafka-kafka:9092
             - name: LOG_LEVEL
-              value: INFO
+              value: DEBUG
             - name: INDEX_PREFIX
               value: "filebeat"
           volumeMounts:
