--- a/kubefiles/filebeat-config.yaml
+++ b/kubefiles/filebeat-config.yaml
@@ -22,7 +22,7 @@ data:
 
     output.kafka:
       # initial brokers for reading cluster metadata
-      hosts: ["kafka-kafka:9092"]
+      hosts: ["kafka-kafka-headless:9092"]
 
       # message topic selection + partitioning
       topic: "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
