added time pattern to index

--- a/kubefiles/logstash-config.yaml
+++ b/kubefiles/logstash-config.yaml
@@ -33,7 +33,7 @@ data:
         hosts => "elasticsearch:9200"
         user => "elastic"
         password => "changeme"
-        index => "%{[@metadata][kafka][topic]}"
+        index => "%{[@metadata][kafka][topic]}-%{+YYYY.MM.dd}"
         document_type => "%{[@metadata][type]}"
       }
     }
