--- a/kubefiles/filebeat-ds.yaml
+++ b/kubefiles/filebeat-ds.yaml
@@ -20,7 +20,7 @@ spec:
               cpu: 50m
               memory: 50Mi
           env:
-            - name: KAFKA_HOSTS
+            - name: LOGSTASH_HOSTS
               value: kafka-kafka-headless:9092
             - name: LOG_LEVEL
               value: debug
