--- a/kubefiles/filebeat-config.yaml
+++ b/kubefiles/filebeat-config.yaml
@@ -23,7 +23,7 @@ data:
     output.kafka:
       enable: true
       # initial brokers for reading cluster metadata
-      hosts: [${KAFKA_HOSTS}]
+      hosts: ["${LOGSTASH_HOSTS}"]
       
       # message topic selection + partitioning
       topic: ${INDEX_PREFIX}
