--- a/kubefiles/filebeat-config.yaml
+++ b/kubefiles/filebeat-config.yaml
@@ -25,10 +25,10 @@ data:
       # initial brokers for reading cluster metadata
       hosts: ["${LOGSTASH_HOSTS}"]
       partition.round_robin:
-        reachable_only: true
+        reachable_only: false
       required_acks: 1
       compression: gzip
-      max_message_bytes: 100000
+      max_message_bytes: 1000000
       
       # message topic selection + partitioning
       topic: ${INDEX_PREFIX}
