--- a/kubefiles/filebeat-config.yaml
+++ b/kubefiles/filebeat-config.yaml
@@ -19,19 +19,48 @@ data:
       multiline.pattern: '^\s'
       multiline.match: after
       document_type: kube-logs
-      close_inactive: 1m
       max_bytes: 10485760
       ignore_older: 5m
-      
+      scan_frequency: 10s
+      harvester_buffer_size: 16384
+      max_bytes: 10485760
+      tail_files: true
+      backoff: 1s
+      max_backoff: 10s
+      backoff_factor: 2
+      harvester_limit: 5
+      close_inactive: 5m
+      close_renamed: true
+      close_removed: true
+      close_eof: true
+    filebeat.spool_size: 20480
+    filebeat.idle_timeout: 5s
+    filebeat.shutdown_timeout: 0
+    queue_size: 1000
+    bulk_queue_size: 100
+    max_procs: 4
+
     output.kafka:
+      metadata:
+        retry.max: 3
+        retry.backoff: 250ms
+        refresh_frequency: 10m
+      worker: 1
+      max_retries: 3
+      bulk_max_size: 20480
+      timeout: 30s
+      broker_timeout: 10s
+      channel_buffer_size: 256
+      keep_alive: 0
+      compression: gzip
+      max_message_bytes: 1000000
+      flush_interval: 1s
       enable: true
       # initial brokers for reading cluster metadata
       hosts: ["${LOGSTASH_HOSTS}"]
       partition.round_robin:
         reachable_only: false
       required_acks: 1
-      compression: gzip
-      max_message_bytes: 1000000
       
       # message topic selection + partitioning
       topic: "%{[@metadata][beat]}-%{+YYYY.MM.dd}" #${INDEX_PREFIX}
