--- a/kubefiles/logstash-config.yaml
+++ b/kubefiles/logstash-config.yaml
@@ -7,31 +7,15 @@ data:
     input {
       kafka {
         bootstrap_servers => "kafka-kafka:9092"
-        topics    => ["filebeat"]
+        topics_pattern    => ["logs-*"]
       }
     }
     
-    filter {
-      mutate {
-        rename => ["log", "message"]
-      }
-
-      date {
-        match => ["time", "ISO8601"]
-        remove_field => ["time"]
-      }
-
-      grok {
-        match => { "source" => "/var/log/containers/%{DATA:pod_name}_%{DATA:namespace}_%{GREEDYDATA:container_name}-%{DATA:container_id}.log" }
-        remove_field => ["source"]
-      }
-    }
-
     output {
       elasticsearch {
         hosts => "elasticsearch:9200"
         user => "elastic"
         password => "changeme"
-        index => "%{[@metadata][kafka][topic]}-%{+YYYY.MM.dd}"
+        index => "%{[@metadata][kafka][topic]}"
       }
     }
