removed brackets from topic pattern

--- a/kubefiles/logstash-config.yaml
+++ b/kubefiles/logstash-config.yaml
@@ -7,7 +7,7 @@ data:
     input {
       kafka {
         bootstrap_servers => "kafka-kafka:9092"
-        topics_pattern    => ["logs-*"]
+        topics_pattern    => "logs-*"
       }
     }
     
